fix icon alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1919,14 +1919,14 @@ input, select, textarea {
 
 		i.fa-envelope {
 			font-size: 1.5em;
-			margin-left: 5.5px;
-			margin-right: 16.5px;
+			margin-left: 2px;
+			margin-right: 14px;
 		}
 
 		i.fa-github {
 			font-size: 1.5em;
-			margin-left: 5.5px;
-			margin-right: 16.5px;
+			margin-left: 2px;
+			margin-right: 16px;
 		}
 
 		.icon > .label {
